[tool.poetry]
name = "app"
version = "0.0.1"
description = "Test app that uses profile-decorator"
authors = ["Harrison Kiang <hkiang01@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
fastapi = "~0.68.1"
gunicorn = "~20.1.0"
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
profile-decorator = {path = "profile-decorator"}
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
ipython = "^7.27.0"
pre-commit = "~2.14.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
