[tool.poetry]
name = "profile-decorator"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Harrison Kiang <hkiang01@gmail.com>"]
maintainers = ["Harrison Kiang <hkiang01@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hkiang01/profile-decorator"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = [
    ".github/",
    ".vscode/",
    "docs/",
    "scripts/",
    "test_app/",
    ".gitignore",
    ".pre-commit-config.yaml",
    "example.py",
]

[tool.poetry.dependencies]
python = ">=3.6,<4"
psutil = ">=4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
