[tool.poetry]
name = "profile-decorator"
version = "0.1.0"
description = ""
authors = ["Harrison Kiang <hkiang01@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
psutil = ">=4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
